--- a/src/html/options.html
+++ b/src/html/options.html
@@ -165,6 +165,11 @@
                     </div>
                     <div class="mdl-card__supporting-text mdl-color-text--grey-600 recentDownloads">
                         <section class="login-required">
+                            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label search">
+                                <input class="mdl-textfield__input form-control" type="text" id="searchBox">
+                                <label class="mdl-textfield__label" for="warningPercentage"><i class="material-icons">search</i>Search recent downloads...</label>
+                                <span class="mdl-textfield__error">No matching results found :(</span>
+                            </div>
                         </section>
                     </div>
                 </div>
