--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -16,12 +16,16 @@
         <header class="mdl-layout__header mdl-color--blue-grey-900">
             <div class="mdl-layout__header-row">
                 <span class="mdl-layout-title">
-						<img src="/icons/icon-64.png"> Real Debrid
-					</span>
+					<img src="/icons/icon-64.png"> Real Debrid
+				</span>
                 <div class="mdl-layout-spacer"></div>
+                <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="search" style="display: none;">
+                    <i class="material-icons">search</i>
+                </button>
+                <div class="mdl-tooltip" for="search">Search</div>
                 <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="options">
-            <i class="material-icons">settings</i>
-          </button>
+                    <i class="material-icons">settings</i>
+                </button>
                 <div class="mdl-tooltip" for="options">Options</div>
             </div>
             <!-- Tabs -->
@@ -52,6 +56,11 @@
                 <div class="page-content">
                     <div class="recentDownloads">
                         <section class="login-required">
+                            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label search" style="display: none;">
+                                <input class="mdl-textfield__input form-control" type="text" id="searchBox">
+                                <label class="mdl-textfield__label" for="warningPercentage"><i class="material-icons">search</i>Search recent downloads...</label>
+                                <span class="mdl-textfield__error">No matching results found :(</span>
+                            </div>
                         </section>
                     </div>
                 </div>
